Complete most form styles for all screens

--- a/src/app/components/tag-multi-select/tag-multi-select.hbs
+++ b/src/app/components/tag-multi-select/tag-multi-select.hbs
@@ -1,4 +1,3 @@
+<div class="tag-list has-dropdown"></div>
 <div class="option-list hidden"></div>
-<div class="tag-list">
-</div>
-<button class="activate-pulldown">▼</button>
+<span class="required"></span>
