--- a/src/app/pages/adoption/adoption.scss
+++ b/src/app/pages/adoption/adoption.scss
@@ -12,8 +12,9 @@ $text-secondary: rgba(color(neutral-darkest), 0.7);
     }
 
     h1 {
-        font-weight: bold;
+        font-weight: 700;
         text-align: center;
+        line-height: 1;
     }
 
     h2 {
@@ -34,15 +35,14 @@ $text-secondary: rgba(color(neutral-darkest), 0.7);
         text-align: center;
     }
 
-    label span {
-        display: block;
-    }
-
     [type="submit"] {
         float: right;
         font-size: 2rem;
-        margin: 1rem 0;
+        margin: 0.84rem 0;
         width: 15rem;
+        appearance: none;
+        border-radius: 0;
+        font-weight: 600;
     }
 
 }
