--- a/src/styles/components/headers.scss
+++ b/src/styles/components/headers.scss
@@ -7,39 +7,35 @@ h3,
 h4,
 h5,
 h6 {
-    color: color(primary);
+    color: color(dark);
     margin: 0;
+    font-weight: 700;
 }
 
 h1,
 .extra-large-header {
-    font-size: 3.5rem;
-    font-weight: 400;
+    font-size: 4.8rem;
     margin-bottom: 2.5rem;
 }
 
 h2,
 .large-header {
     font-size: 2.8rem;
-    font-weight: 300;
     margin-bottom: 1.8rem;
 }
 
 h3,
 .medium-header {
     font-size: 2.1rem;
-    font-weight: 400;
     margin-bottom: 1.1rem;
 }
 
 h4,
 .small-header {
     font-size: 1.7rem;
-    font-weight: 300;
 }
 
 h5,
 .extra-small-header {
     font-size: 1.4rem;
-    font-weight: 300;
 }
