--- a/src/styles/components/option-list.scss
+++ b/src/styles/components/option-list.scss
@@ -4,18 +4,36 @@ $faint-gray: rgba(color(gray), 0.33);
 
 .option-list {
     background-color: color(neutral-lightest);
-    border: outset thin $faint-gray;
     cursor: pointer;
-    padding: 0 1rem;
     position: absolute;
-    right: 3rem;
-    z-index: 30;
+    top: 4.8rem;
+    left: 0;
+    z-index: 2;
+    width: 100%;
+    max-height: 20rem;
+    overflow-y: auto;
+    border-style: solid;
+    border-width: 0.1rem;
+    border-top-color: color(neutral-lightest);
+    border-right-color: rgba(color(gray), 0.33);
+    border-bottom-color: color(cyan);
+    border-left-color: rgba(color(gray), 0.33);
+    box-shadow: 0 0.2rem 0.3rem rgba(color(neutral-lighter), 0.8);
 
     > .option {
         background-color: color(neutral-lightest);
+        font-weight: 600;
+        padding: 0.5rem 1rem;
+        width: 100%;
+        color: color(neutral-dark);
 
         &:hover {
-            background-color: $faint-gray;
+            background-color: rgba(color(neutral-lighter), 0.3);
         }
+    }
+
+    &:focus {
+        outline: 0;
+
     }
 }
