--- a/src/styles/components/single-select.scss
+++ b/src/styles/components/single-select.scss
@@ -1,18 +1,16 @@
 @import 'variables';
+@import 'mixins';
 
 $faint-gray: rgba(color(gray), 0.33);
 
 .single-select {
+    background-color: white;
     position: relative;
-
-    .option-list {
-        left: 0;
-    }
+    height: 4.8rem;
 
     .selected-button {
         border: thin solid $faint-gray;
         cursor: pointer;
-        min-height: 5rem;
+        padding-right: 4.8rem;
     }
-
 }
