--- a/src/styles/mixins/responsive.scss
+++ b/src/styles/mixins/responsive.scss
@@ -23,3 +23,14 @@
         @content;
     }
 }
+
+@mixin tablet-up {
+
+    @include tablet {
+        @content;
+    }
+
+    @include desktop {
+        @content;
+    }
+}
