--- a/src/app/pages/interest/interest.hbs
+++ b/src/app/pages/interest/interest.hbs
@@ -9,7 +9,7 @@
     <h2>Contact Information</h2>
     <div>
         <input type=hidden name="oid" value="00DU0000000Kwch">
-        <input type=hidden name="retURL" value="{{urlOrigin}}/home">
+        <input type=hidden name="retURL" value="{{urlOrigin}}/interest-confirmation">
         <input type=hidden name="lead_source" value="OS Interest Form">
         <input type=hidden name="00NU00000055spw" value="High Interest in Adopting">
     </div>
