--- a/src/app/pages/home/banners/us-history/us-history.hbs
+++ b/src/app/pages/home/banners/us-history/us-history.hbs
@@ -25,7 +25,7 @@
     <div class="subject-links">
         <ul>
             <li>
-                <a class="btn btn-large btn-orange explore-subject" href="/books/us-history">
+                <a class="btn btn-large btn-orange explore-subject" href="/subjects/history">
                     Explore U.S. History
                 </a>
             </li>
