--- a/src/app/components/quotes/quotes.scss
+++ b/src/app/components/quotes/quotes.scss
@@ -1,21 +1,12 @@
 @import 'variables';
 @import 'mixins';
 
-.quote-buckets {
-    background-color: lighten(color(neutral-lighter), 8%);
-
-    > div {
-        margin: 0 auto;
-        width: 90vw;
-    }
-}
-
 .quotes {
     align-items: stretch;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    padding: calc(1vw + 5rem) 0 calc(1vw + 2rem);
+    padding: 3rem 1.5rem;
     max-width: $boxed-width;
     margin: 0 auto;
 
@@ -23,12 +14,30 @@
         align-items: stretch;
         background-color: color(neutral-lightest);
         display: flex;
-        flex: 1 1 32rem;
+        flex: 1 1 100%;
+        margin: 0 0 1.5rem;
         min-height: 23rem;
-        margin: 0 1.25vw 3rem;
-        min-width: (breakpoints(phone) * 0.67);
+
+        @media (min-width: 600px) {
+            flex: 1 0 45%;
+        }
+
+        @media (min-width: 900px) {
+            flex: 1 0 32%;
+            margin: 0;
+        }
 
         &.left {
+
+            @media (min-width: 600px) {
+                margin-left: 1.5rem;
+            }
+
+            @media (min-width: 900px) {
+                margin-left: 1.5rem;
+                margin-right: 1.5rem;
+            }
+
             > .image {
                 order: 2;
             }
@@ -68,6 +77,7 @@
 
         &.full {
             background-color: color(orange);
+            margin: 0;
 
             .quote {
                 padding: 2rem 3rem;
@@ -105,6 +115,11 @@
         flex: 1 1 auto;
         padding: 2rem;
         position: relative;
+        align-self: center;
+
+        @media (min-width: 900px) {
+            align-self: auto;
+        }
 
         blockquote {
             display: block;
