Complete confirmation pages
Created pages for faculty and comp-copy confirmations
Adjusted faculty and comp-copy to redirect properly to those
confirmations
Added link to interest confirmation
Pulled .go-to style into main, so they all could use it

--- a/src/app/pages/interest-confirmation/interest-confirmation.hbs
+++ b/src/app/pages/interest-confirmation/interest-confirmation.hbs
@@ -5,3 +5,6 @@
     free textbooks and low-cost learning tools that are revolutionizing
     classrooms across the country and the world.
 </p>
+<div>
+    <a class="go-to" href="/subjects">Explore our subjects</a>
+</div>
