--- a/src/app/pages/comp-copy/comp-copy.hbs
+++ b/src/app/pages/comp-copy/comp-copy.hbs
@@ -18,7 +18,7 @@
                 <input name="utf8" type="hidden" value="✓" />
                 <!-- This is our organization id -->
                 <input type=hidden name="oid" value="00DU0000000Kwch">
-                <input type=hidden name="retURL" value="{{urlOrigin}}">
+                <input type=hidden name="retURL" value="{{urlOrigin}}/comp-copy-confirmation">
                 <input type=hidden name="lead_source" value="Comp Request">
             </div>
             <fieldset class="labeled-inputs">
