--- a/src/app/pages/faculty-verification/faculty-verification.hbs
+++ b/src/app/pages/faculty-verification/faculty-verification.hbs
@@ -15,7 +15,7 @@
                 <input name="utf8" type="hidden" value="✓" />
                 <!-- This is our organization id -->
                 <input type=hidden name="oid" value="00DU0000000Kwch">
-                <input type=hidden name="retURL" value="{{urlOrigin}}">
+                <input type=hidden name="retURL" value="{{urlOrigin}}/faculty-confirmation">
                 <input type=hidden name="lead_source" value="OSC Faculty">
             </div>
             <fieldset class="labeled-inputs">
