--- a/src/app/pages/adoption-confirmation/adoption-confirmation.hbs
+++ b/src/app/pages/adoption-confirmation/adoption-confirmation.hbs
@@ -7,9 +7,12 @@
     are joining thousands of educators in providing greater access to quality
     learning resources for your students.
 </p>
-<h2>Have you adopted more books?</h2>
 <p>
-    Please <a href="/adoption">tell us about it</a>, too!
+    Have you adopted another OpenStax book?<br />
+    <a class="go-to" href="/adoption">Let us know</a>
+</p>
+<p>
+    <a class="go-to" href="/subjects">Go back to our books</a>
 </p>
 <div>
     <p>
