--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -25,7 +25,7 @@
                     <h3>Get this title</h3>
                     <div class="get-this-book"></div>
                     <div class="notes">
-                        <sup>*</sup>Our website is Section 508 Level A accessible.
+                        <!-- <small><sup>*</sup>Our website is Section 508 Level A accessible.</small> -->
                     </div>
                     <div class="cta">
                         <p class="interested-text">
@@ -38,38 +38,43 @@
                 </div>
                 </section>
         </section>
-        <div class="endorsement">
+        <section class="endorsement">
             <div class="container">
                 <blockquote>
-                    <p id="endorsement"></p>
-                    <p>
-                        &mdash; <span id="attribution"></span>
-                        <span id="attribution-school"></span>
-                    </p>
+                    <div id="endorsement"></div>
+                        <p class="attribution">
+                                &mdash; <span id="attribution"></span>
+                                <span id="attribution-school"></span>
+                        </p>
+
                 </blockquote>
             </div>
-        </div>
+            {{{strips}}}
+        </section>
         <section id="resources" class="resources block">
             <div class="container">
 
-            <h1>Resources</h1>
+            <h2>Resources</h2>
             <p>
                 Access doesn't end with the book. OpenStax has compiled additional
                 resources for both instructors and students, from online homework tools and
                 interactive study guides, to instructor-only resources that coincide with
                 Physics.
             </p>
-            <h2>OpenStax Instructor Resources</h2>
+            <h3>OpenStax Instructor Resources</h3>
             <p>
                 Get started with free resources to support your course. (Verified instructor
                 account required.)
             </p>
-            <div id="instructor-resources" class="resource-row">
+            <div id="instructor-resources" class="row">
             </div>
-            <h2>Ally Resources</h2>
+            <div class="row">
+            <h3>Ally Resources</h3>
             <p>Learn more about our <a href="/allies">allies</a>.</p>
-            <h3>Online Homework</h3>
-            <div class="resource-row">
+            </div>
+            <!-- <div class="resource-row">
+                <h3>Online Homework</h3>
+
                 {{#each onlineHomework}}
                     <div class="blurb">
                         <img src="{{imageUrl}}" />
@@ -77,9 +82,10 @@
                         <p class="text">{{blurb}}</p>
                     </div>
                 {{/each}}
-            </div>
-            <h3>Adaptive Courseware</h3>
-            <div class="resource-row">
+            </div> -->
+            <!-- <div class="row">
+                <h3>Adaptive Courseware</h3>
+
                 {{#each adaptiveCourseware}}
                     <div class="blurb">
                         <img src="{{imageUrl}}" />
@@ -87,26 +93,27 @@
                         <p class="text">{{blurb}}</p>
                     </div>
                 {{/each}}
-            </div>
-            <h2>Student Resources</h2>
-            <div id="student-resources" class="resource-row">
+            </div> -->
+            <div class="row">
+                <h3>Student Resources</h3>
+                <div id="student-resources" class="resource-row">
+                </div>
             </div>
             <div class="cta">
                 <a class="btn">Learn how you can tell your instructor about OpenStax!</a>
             </div>
         </div>
         </section>
-            <section id="details">
+            <section id="details" class="authors">
                 <div class="container">
-                <h1>Details</h1>
-                <h2>Authors</h2>
-                <div id="all-authors">
-                </div>
+                <h2>Details</h2>
+                <h3>Authors</h3>
+                <div id="all-authors"></div>
             </div>
             </section>
             <section id="errata" class="errata">
                 <div class="container">
-                <h1>Errata</h1>
+                <h2>Errata</h2>
                 <p>
                     All OpenStax textbooks undergo a rigorous review process. However, like
                     any professional-grade textbook, errors sometimes occur. The good part
