--- a/src/app/pages/subjects/subjects.hbs
+++ b/src/app/pages/subjects/subjects.hbs
@@ -3,8 +3,7 @@
     @import url(https://fonts.googleapis.com/css?family=Lato:400,900);
 </style>
 <div class="subjects-page">
-    <div class="container">
-        <header data-manager="page-description"></header>
+    <div class="container" data-manager="page-description">
     </div>
     <div class="feature-block">
         <div class="container">
