Add banner styles for all screens

--- a/src/app/pages/k-12/k-12.hbs
+++ b/src/app/pages/k-12/k-12.hbs
@@ -1,5 +1,6 @@
 <style scoped>
     @import url(/app/pages/k-12/k-12.css);
+    @import url(/app/pages/k-12/banner.css);
     @import url(/app/components/buckets/buckets.css);
     @import url(/app/components/quotes/quotes.css);
 </style>
@@ -22,7 +23,7 @@
             </div>
         </div>
 
-        <div class="tutor-banner"></div>
+        <div class="tutor-banner" id="tutor"></div>
 
         <div class="boxes"></div>
 
