--- a/src/app/pages/k-12/boxes/boxes.scss
+++ b/src/app/pages/k-12/boxes/boxes.scss
@@ -88,5 +88,13 @@
                 background-image: url('/images/k-12/books.jpg');
             }
         }
+
+        .cnx {
+
+            .image {
+                background-image: url('/images/k-12/bx-cnx-2x.jpg');
+            }
+        }
+
     }
 }
