--- a/src/styles/components/headers.scss
+++ b/src/styles/components/headers.scss
@@ -8,8 +8,10 @@ h4,
 h5,
 h6 {
     color: color(neutral-dark);
+    letter-spacing: -0.2rem;
     margin: 0;
     font-weight: 700;
+    line-height: 1;
 }
 
 h1,
