Show and filter book links on Allies page

--- a/src/app/pages/allies/allies.hbs
+++ b/src/app/pages/allies/allies.hbs
@@ -1,7 +1,7 @@
 <style scoped>
     @import url(/app/pages/allies/allies.css);
 </style>
-<div class="hero">
+<div class="hero text-content">
     <h1>Friends in HigherEd Places.</h1>
     <p class="subhead">
         OpenStax allies provide additional tools alongside our OpenStax texts.
@@ -13,5 +13,5 @@
     <div class="filter-buttons"></div>
 </div>
 {{{strips}}}
-<div class="blurbs">
+<div class="blurbs text-content">
 </div>
