--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -253,37 +253,49 @@
         }
 
         .row {
-            flex: 1 100%;
-            display: flex;
-            flex-flow: column nowrap;
+            flex: 0 0 100%;
+            margin-bottom: 2.5rem;
+
         }
 
         .cta {
-            flex: 1 auto;
-            display: flex;
-            flex-flow: column nowrap;
+            flex: 0 0 100%;
         }
     }
 
     .authors {
-        padding: 6rem 0;
+        font-size: 1.6rem;
+        line-height: 2.6rem;
+        margin: 6rem 0 3rem;
 
         .container {
+            flex-flow: column wrap;
 
             @include desktop {
-                padding: 6rem 27.5rem 6rem 1.5rem;
+                padding: 0 27.5rem 0 1.5rem;
             }
         }
     }
 
     .errata {
-        padding: 0 0 6rem;
+        font-size: 1.6rem;
+        line-height: 2.6rem;
+        margin: 0 0 6rem;
 
         .container {
+            flex-flow: column wrap;
 
             @include desktop {
-                padding: 0 27.5rem 6rem 1.5rem;
+                padding: 0 27.5rem 0 1.5rem;
             }
+        }
+
+        h2 {
+            margin-bottom: 0;
+        }
+
+        .go-to {
+            display: block;
         }
     }
 }
